Center aligned the items and fixed the footer on the bottom of the page

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,7 +1,34 @@
 body{
     font-family: 'RocknRoll One', sans-serif;
+    color: #EDF0DA;
+    background-color: #1A2C37;
+    /* color: #3B2D2B; */
 }
 
 h1{
     font-family: 'DynaPuff', cursive;
+    background-color: #1A2C37;
+}
+
+section {
+    display: none;
+}
+
+
+footer {
+    position: fixed;
+}
+
+.search{ 
+    display: flex;
+    justify-content: center;
+}
+
+h1{ 
+    text-align: center;
+}
+
+
+h2{
+    text-align: center;
 }
